# programming_tasks_for_PlayMotion2project

./: README.md
my_pubsub_pkg/: CMakeLists.txt  package.xml
my_pubsub_pkg/src/: publisher_node.cpp  subscriber_node.cpp
string_plugin_system/: CMakeLists.txt  package.xml  plugin.xml
string_plugin_system/include/string_plugin_system/: string_plugin_base.hpp
string_plugin_system/src/: count_char_plugin.cpp  plugin_loader_node.cpp  reverse_string_plugin.cpp
tiago_arm/: CMakeLists.txt  package.xml
tiago_arm/src/: trajectory_file.cpp
